
*eix-0.29.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-update: Make long option --override-method work
	- eix-update: ebuild*: export PORTAGE_REPO_NAME and a rudimentary
	  PORTAGE_ECLASS_LOCATIONS (>=portage-2.2.0_alpha89 needs it),
	  see http://bugs.gentoo.org/show_bug.cgi?id=478320
	- Read also PORTAGE_REPOS_CONF /usr/share/portage/config/repos.conf
	- manpage: cosmetical fixes

*eix-0.29.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fallback to PORTDIR=/usr/portage, see
	  http://forums.gentoo.org/viewtopic-p-7349870.html
	- Make --installed-slot work again (regression from 0.26.0).
	  Thanks to Vikraman <vikraman at gentoo.org> for finding and fixing,
	  see http://bugs.gentoo.org/show_bug.cgi?id=475564
	- Fix md5 algorithm for files of 8192 bytes or longer (serious bug
	  from the beginning which made md5-cache for longer ebuilds invalid).
	- Fix possible memory leaks.

*eix-0.29.0
	Артём Воротников <skybon at gmail.com>:
	- Russian translation updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-sync now calls eix-remote add1/add2 by default if necessary
	- Support /etc/portage/repos.conf, honouring priority values
	- Currently, --print PORTDIR and --print PORTDIR_OVERLAY are modified
	  by repos.conf: useful for scripts, and faster than portageq.
	  If possible, this feature will be kept in future versons of eix
	- PORTDIR and PORTDIR_OVERLAY are probably going to be supported
	  as input variables for eix, even if perhaps deprecated by portage,
	  see http://bugs.gentoo.org/show_bug.cgi?id=474590
	- Let dependency attribute work for installed versions
	- Introduce --deps-installed, DEPS_INSTALLED
	- Introduce new tool eix-header
	- Remove now redundant --print-overlay-{path,label,data}, --is-current
	- eix-remote: speedup of add action due to single call of eix-header
	- Fix --*depend in zsh-completion
	- Allow /etc/eix-sync.conf not ending with newline. Use read -r